# NM

KP/: CMakeLists.txt  FuncMaker.cpp  FuncMaker.hpp  General.cpp  General.hpp  ImproperIntegral.cpp  ImproperIntegral.hpp  main.cpp  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test_pattern.txt
lab1/: CMakeCache.txt  CMakeLists.txt  General.hpp  LU.hpp  LUExmpl.txt  LUExmpl2.txt  LUExmpl3.txt  LUans.txt  LUans2.txt  LUans3.txt  Makefile  Matrix.hpp  MatrixFunc.hpp  QR.hpp  QRExmpl.txt  QRExmpl2.txt  QRExmpl3.txt  QRans.txt  QRans2.txt  QRans3.txt  RUN.hpp  RUNExmpl.txt  RUNans.txt  SI.hpp  SIExmpl.txt  SIans.txt  SIans2.txt  SIansYAKOBI.txt  SIansZEIDEL.txt  SPIN.hpp  SPINExmpl.txt  SPINans.txt  SimpleIteration.hpp  a.txt  a2.txt  a3.txt  cmake_install.cmake  exmpl.txt  main  main.cpp  (+1 more)
lab2/: 2-1.cpp  2-1.hpp  2-2.cpp  2-2.hpp  CMakeLists.txt  FT.cpp  FuncMaker.cpp  FuncMaker.hpp  General.cpp  General.hpp  Matrix.hpp  main.cpp  test1.txt  test2.txt  test24.txt  test3.txt
lab3/: 3-1.cpp  3-1.hpp  3-2.cpp  3-2.hpp  3-3.cpp  3-3.hpp  3-4.cpp  3-4.hpp  3-5.cpp  3-5.hpp  CMakeLists.txt  FuncMaker.cpp  FuncMaker.hpp  General.cpp  General.hpp  main.cpp  test.txt  test1.txt  test2.txt  test24.txt  test29.txt
lab4/: 3-3.cpp  4-1.cpp  4-1.hpp  4-2.cpp  4-2.hpp  CMakeLists.txt  FuncMaker.hpp  General.cpp  General.hpp  LU.hpp  main.cpp  t6.txt  test1.txt  test2.txt  test24.txt  test3.txt
lab5/: 5-1.cpp  5-1.hpp  CMakeCache.txt  CMakeLists.txt  FuncMaker.hpp  General.cpp  General.hpp  Makefile  cmake_install.cmake  main  main.cpp  test1.txt  test3.txt  test4.txt  test5.txt
lab7/: 7-1.cpp  7-1.hpp  CMakeLists.txt  FuncMaker.hpp  General.cpp  main  main.cpp  test3.txt  test4.txt  test5.txt
